--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <div>
         <h1 class="header">hello, homepage</h1>
         </div>
-        <a href="https://chipcharmer.github.io/page1.html">Get Page One</a>
+        <a href="https://chipcharmer.github.io/page_1.html">Get Page One</a>
         <hr>
-        <a href="https://chipcharmer.github.io/page2.html">Get Page Two</a>
+        <a href="https://chipcharmer.github.io/page_2.html">Get Page Two</a>
         <hr>
-        <a href="https://chipcharmer.github.io/page3.html">Get Page Three</a>
+        <a href="https://chipcharmer.github.io/page_3.html">Get Page Three</a>
         <hr>
-        <a href="https://chipcharmer.github.io/page4.html">Get Page Four</a>
+        <a href="https://chipcharmer.github.io/page_4.html">Get Page Four</a>
     </body>
 </html>
 
