--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
         <link href="/style.css" rel="stylesheet">
-        <script src="/scripts/index.js"></script>
+        <script>
+            // index.js
+            document.addEventListener("DOMContentLoaded", function () {
+                fetch('.text/homepage1.txt')  // Fetch the content of paragraph.txt
+                .then(response => response.text())  // Convert the response to text
+                .then(text => {  // Once the content is fetched
+                    const paragraphPlaceholder = document.getElementById('paragraphPlaceholder');
+                    paragraphPlaceholder.innerText = text;  // Insert the text into the placeholder element
+                })
+                .catch(error => console.error('Error fetching paragraph:', error));  // Handle any errors
+             }); 
+        </script>
         <title>My Webpage</title>
     </head>
     <body>
