--- a/index.html
+++ b/index.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
-
 <html lang="en">
-    <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <link href="/style.css" rel="stylesheet">
-        <script>
-            // index.js
-            document.addEventListener("DOMContentLoaded", function () {
-                fetch('.text/homepage1.txt')  // Fetch the content of paragraph.txt
-                .then(response => response.text())  // Convert the response to text
-                .then(text => {  // Once the content is fetched
-                    const paragraphPlaceholder = document.getElementById('paragraphPlaceholder');
-                    paragraphPlaceholder.innerText = text;  // Insert the text into the placeholder element
-                })
-                .catch(error => console.error('Error fetching paragraph:', error));  // Handle any errors
-             }); 
-        </script>
-        <title>My Webpage</title>
-    </head>
-    <body>
-        <div>
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="/style.css" rel="stylesheet">
+    <title>My Webpage</title>
+</head>
+<body>
+    <div>
         <h1 class="header">hello, homepage</h1>
-        </div>
-        <div id="paragraphPlaceholder"></div>
-        <a href="/page_1.html">Get Page One</a>
-        <hr>
-        <a href="/page_2.html">Get Page Two</a>
-        <hr>
-        <a href="/page_3.html">Get Page Three</a>
-        <hr>
-        <a href="/page_4.html">Get Page Four</a>
-    </body>
-</html>
+    </div>
+    <div id="paragraphPlaceholder"></div>
+    <a href="/page_1.html">Get Page One</a>
+    <hr>
+    <a href="/page_2.html">Get Page Two</a>
+    <hr>
+    <a href="/page_3.html">Get Page Three</a>
+    <hr>
+    <a href="/page_4.html">Get Page Four</a>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script>
+        // index.js
+        document.addEventListener("DOMContentLoaded", function () {
+            fetch('./text/homepage1.txt')  // Corrected file path
+            .then(response => response.text())  
+            .then(text => {  
+                const paragraphPlaceholder = document.getElementById('paragraphPlaceholder');
+                paragraphPlaceholder.innerText = text;  
+            })
+            .catch(error => console.error('Error fetching paragraph:', error));  
+        }); 
+    </script>
+</body>
+</html>
