--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script>
         // index.js
         document.addEventListener("DOMContentLoaded", function () {
-            fetch('./text/homepage1.txt')  // Corrected file path
+            fetch('./scripts/text/homepage1.txt')  // Corrected file path
             .then(response => response.text())  
             .then(text => {  
                 const paragraphPlaceholder = document.getElementById('paragraphPlaceholder');
