--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script>
-        // index.js
-        document.addEventListener("DOMContentLoaded", function () {
-            fetch('./scripts/text/homepage1.txt')  // Corrected file path
-            .then(response => response.text())  
-            .then(text => {  
-                const paragraphPlaceholder = document.getElementById('paragraphPlaceholder');
-                paragraphPlaceholder.innerText = text;  
-            })
-            .catch(error => console.error('Error fetching paragraph:', error));  
-        }); 
+       document.addEventListener("DOMContentLoaded", function () {
+    fetch('/scripts/text/homepage1.txt')  
+    .then(response => response.text())  
+    .then(text => {  
+        const paragraphPlaceholder = document.getElementById('paragraphPlaceholder');
+        paragraphPlaceholder.innerText = text;  
+    })
+    .catch(error => console.error('Error fetching paragraph:', error));  
+}); 
+
     </script>
 </body>
 </html>
