--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="/style.css" rel="stylesheet">
+    <script scr="/scripts/index.js"></script>
     <title>My Webpage</title>
 </head>
 <body>
@@ -19,17 +20,6 @@
     <a href="/page_4.html">Get Page Four</a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script>
-       document.addEventListener("DOMContentLoaded", function () {
-    fetch('/scripts/text/homepage1.txt')  
-    .then(response => response.text())  
-    .then(text => {  
-        const paragraphPlaceholder = document.getElementById('paragraphPlaceholder');
-        paragraphPlaceholder.innerText = text;  
-    })
-    .catch(error => console.error('Error fetching paragraph:', error));  
-}); 
-
-    </script>
+   
 </body>
 </html>
