--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="/style.css" rel="stylesheet">
-    <script scr="/scripts/index.js"></script>
+    <script scr="scripts/index.js"></script>
     <title>My Webpage</title>
 </head>
 <body>
@@ -11,13 +11,13 @@
         <h1 class="header">hello, homepage</h1>
     </div>
     <div id="paragraphPlaceholder"></div>
-    <a href="/page_1.html">Get Page One</a>
+    <a href="pages/page_1.html">Get Page One</a>
     <hr>
-    <a href="/page_2.html">Get Page Two</a>
+    <a href="pages/page_2.html">Get Page Two</a>
     <hr>
-    <a href="/page_3.html">Get Page Three</a>
+    <a href="pages/page_3.html">Get Page Three</a>
     <hr>
-    <a href="/page_4.html">Get Page Four</a>
+    <a href="pages/page_4.html">Get Page Four</a>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
    
