--- a/index.html
+++ b/index.html
@@ -1,24 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link href="/style.css" rel="stylesheet">
-    <title>My Webpage</title>
-</head>
-<body>
-    <div>
-        <h1 class="header">hello, homepage</h1>
-    </div>
-    <div id="paragraphPlaceholder"></div>
-    <a href="/pages/page_1.html">Get Page One</a>
-    <hr>
-    <a href="/pages/page_2.html">Get Page Two</a>
-    <hr>
-    <a href="/pages/page_3.html">Get Page Three</a>
-    <hr>
-    <a href="/pages/page_4.html">Get Page Four</a>
 
-    <script src="/scripts/index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-</body>
+<html lang="en">
+    <head>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
+        <title>Trivia!</title>
+        <script>
+            // Code to check answers to questions
+            document.addEventListener('DOMContentLoaded', function() {
+                // Part 1: Multiple Choice
+                let buttonIds = ["answer1", "answer2", "answer3", "answer4", "answer5"];
+                let previousButton = null;
+                let messagePart1 = document.getElementById('messagePart1');
+
+                buttonIds.forEach(id => {
+                    let button = document.getElementById(id);
+                    button.addEventListener("click", function(event) {
+                        event.preventDefault();
+
+                        // Reset previous button choice color
+                        if (previousButton) {
+                            previousButton.style.backgroundColor = ""; // Reset to default color
+                        }
+
+                        // Change button's color and display text based on the correctness of the answer
+                        if (this.id === "answer4") {
+                            this.style.backgroundColor = "green";
+                            messagePart1.textContent = "Correct!";
+                        } else {
+                            this.style.backgroundColor = "red";
+                            messagePart1.textContent = "Incorrect";
+                        }
+
+                        // Store current button choice
+                        previousButton = this;
+                    });
+                });
+
+                // Part 2: Free Response
+                let checkAnswerPart2 = document.getElementById("checkAnswerPart2");
+                let textfieldPart2 = document.getElementById("textfieldPart2");
+                let messagePart2 = document.getElementById("messagePart2");
+
+                // Check for answers when the button is clicked
+                checkAnswerPart2.addEventListener("click", function(event) {
+                    event.preventDefault();
+
+                    // If answer is cs50
+                    if (textfieldPart2.value.trim().toLowerCase() === 'cs50') {
+                        textfieldPart2.style.backgroundColor = 'green';
+                        messagePart2.textContent = 'Correct!';
+
+                    } else {
+                        textfieldPart2.style.backgroundColor = 'red';
+                        messagePart2.textContent = 'Incorrect';
+                    }
+                });
+            });
+        </script>
+    </head>
+    <body>
+        <div class="header">
+            <h1>Trivia!</h1>
+        </div>
+
+        <div class="container">
+            <div class="section">
+                <h2>Part 1: Multiple Choice </h2>
+                <hr>
+                <!-- Multiple choice question here -->
+                <h3>
+                    Where Was Gondor When the Westfold Fell?
+                </h3>
+                <form>
+                    <button id="answer1">Ordering second breakfast</button>
+                    <button id="answer2">In a meeting with the Eagles</button>
+                    <button id="answer3">Lost in the Mines of Moria</button>
+                    <button id="answer4">In Gondor</button>
+                    <button id="answer5">Eating Lembas Bread</button>
+                    <p id="messagePart1"></p>
+                </form>
+            </div>
+
+            <div class="section">
+                <h2>Part 2: Free Response</h2>
+                <hr>
+                <!-- Free response question here -->
+                <h3>
+                    Which Online Computer Science Introduction Course is the best accross the whole internet?
+                </h3>
+                <form>
+                    <input id="textfieldPart2" autocomplete="off">
+                    <button id="checkAnswerPart2">Check Answer</button>
+                    <p id="messagePart2"></p>
+                </form>
+            </div>
+        </div>
+    </body>
 </html>
