--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
         <link href="styles.css" rel="stylesheet">
         <meta charset="utf-8">
-        <title>Trivia!</title>
+        <title>freeCodeCamp</title>
         <script> src="/scripts/index.js"</script>
     </head>
     <body>
        <main>
-      <h1>CatPhotoApp</h1>
+      <h1 class="header">Embedded Journey</h1>
       <section>
         <h2>Cat Photos</h2>
-        <!-- TODO: Add link to cat photos -->
-        <p>See more <a target="_blank" href="https://freecatphotoapp.com">cat photos</a> in our gallery.</p>
-        <a href="https://freecatphotoapp.com"><img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/relaxing-cat.jpg" alt="A cute orange cat lying on its back."></a>
+        <p>See more <a target="_blank" href="/pages/page_1.html">pages</a> in our site.</p>
+        <a href="https://www.ti.com/tool/MSP-EXP430FR5994"><img src="https://www.ti.com/tool/MSP-EXP430FR5994" alt="A MSP-EXP430FR5994 evaluation kit."></a>
       </section>
       <section>
         <h2>Cat Lists</h2>
