--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
         <link href="styles.css" rel="stylesheet">
         <meta charset="utf-8">
-        <title>freeCodeCamp</title>
+        <title>Homepage</title>
         <script> src="/scripts/index.js"</script>
     </head>
     <body>
@@ -14,15 +14,15 @@
       <section>
         <h2>Cat Photos</h2>
         <p>See more <a target="_blank" href="/pages/page_1.html">pages</a> in our site.</p>
-        <a href="https://www.ti.com/tool/MSP-EXP430FR5994"><img src="https://www.ti.com/tool/MSP-EXP430FR5994" alt="A MSP-EXP430FR5994 evaluation kit."></a>
+        <a href="https://www.ti.com/tool/MSP-EXP430FR5994"><img src="https://www.ti.com/content/dam/ticom/images/products/ic/microcontrollers/msp/evm-board/msp-exp430fr5994-angled.png:large" alt="A MSP-EXP430FR5994 evaluation kit."></a>
       </section>
       <section>
-        <h2>Cat Lists</h2>
-        <h3>Things cats love:</h3>
+        <h2>FOO</h2>
+        <h3>BAR</h3>
         <ul>
-          <li>cat nip</li>
-          <li>laser pointers</li>
-          <li>lasagna</li>
+          <li>BAZ</li>
+          <li>BAZ</li>
+          <li>BAZ</li>
         </ul>
         <figure>
           <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
