--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <main>
       <h1 class="header">Embedded Journey</h1>
       <section>
-        <h2>Cat Photos</h2>
+        <h2>Homepage</h2>
         <p>See more <a target="_blank" href="/pages/page_1.html">pages</a> in our site.</p>
         <a href="https://www.ti.com/tool/MSP-EXP430FR5994"><img src="https://www.ti.com/content/dam/ticom/images/products/ic/microcontrollers/msp/evm-board/msp-exp430fr5994-angled.png:large" alt="A MSP-EXP430FR5994 evaluation kit."></a>
       </section>
@@ -25,43 +25,41 @@
           <li>BAZ</li>
         </ul>
         <figure>
-          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/lasagna.jpg" alt="A slice of lasagna on a plate.">
-          <figcaption>Cats <em>love</em> lasagna.</figcaption>  
+          <img src="" alt="INSERT IMAGE">
+          <figcaption>My <em>2005</em> website.</figcaption>  
         </figure>
-        <h3>Top 3 things cats hate:</h3>
+        <h3>BAR</h3>
         <ol>
-          <li>flea treatment</li>
-          <li>thunder</li>
-          <li>other cats</li>
+          <li>BAZ,</li>
+          <li>BAZ</li>
+          <li>BAZ</li>
         </ol>
         <figure>
-          <img src="https://cdn.freecodecamp.org/curriculum/cat-photo-app/cats.jpg" alt="Five cats looking around a field.">
-          <figcaption>Cats <strong>hate</strong> other cats.</figcaption>  
+          <img src="" alt="INSERT IMAGE">
+          <figcaption>I <strong>Really</strong> need to get better at this.</figcaption>  
         </figure>
       </section>
       <section>
-        <h2>Cat Form</h2>
-        <form action="https://freecatphotoapp.com/submit-cat-photo">
+        <h2>FOO</h2>
+        <form action="">
           <fieldset>
-            <legend>Is your cat an indoor or outdoor cat?</legend>
-            <label><input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor</label>
-            <label><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label>
+            <legend>Do you like embedded systems?</legend>
+            <label><input id="yes" type="radio" name="yes-no" value="yes" checked> Yes</label>
+            <label><input id="no" type="radio" name="yes-no" value="no"> No</label>
           </fieldset>
           <fieldset>
-            <legend>What's your cat's personality?</legend>
-            <input id="loving" type="checkbox" name="personality" value="loving" checked> <label for="loving">Loving</label>
-            <input id="lazy" type="checkbox" name="personality" value="lazy"> <label for="lazy">Lazy</label>
-            <input id="energetic" type="checkbox" name="personality" value="energetic"> <label for="energetic">Energetic</label>
+            <legend>SOMETHING</legend>
+            <input id="qux" type="checkbox" name="checkboxes" value="qux" checked> <label for="qux">QUX</label>
+            <input id="quux" type="checkbox" name="checkboxes" value="quux"> <label for="quux">QUUX</label>
+            <input id="foobar" type="checkbox" name="checkboxes" value="foobar"> <label for="foobar">FOOBAR</label>
           </fieldset>
-          <input type="text" name="catphotourl" placeholder="cat photo URL" required>
+          <input type="text" name="texfield" placeholder="FOOBARBAZ" required>
           <button type="submit">Submit</button>
         </form>
       </section>
     </main>
     <footer>
-      <p>
-        No Copyright - <a href="https://www.freecodecamp.org">freeCodeCamp.org</a>
-      </p>
+        <p>&copy; 2024 ChipCharmer. All rights reserved.</p>
     </footer>
   </body>
     </body>
