--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Homepage</title>
         <script> src="/scripts/index.js"</script>
     </head>
-    <body class="body">
+    <body class="body style.backgroundColor="red">
        <main>
       <h1 class="header">Embedded Journey</h1>
       <section>
