--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
         <title>Homepage</title>
         <script> src="/scripts/index.js"</script>
     </head>
-    <body class="body style.backgroundColor="red">
+    <body class="body">
        <main>
       <h1 class="header">Embedded Journey</h1>
       <section>
         <h2>Homepage</h2>
         <p>See more <a target="_blank" href="/pages/page_1.html">pages</a> in our site.</p>
-        <a href="https://www.ti.com/tool/MSP-EXP430FR5994"><img src="https://www.ti.com/content/dam/ticom/images/products/ic/microcontrollers/msp/evm-board/msp-exp430fr5994-angled.png:large" alt="A MSP-EXP430FR5994 evaluation kit."></a>
+        <figure>
+            <a href="https://www.ti.com/tool/MSP-EXP430FR5994"><img src="https://www.ti.com/content/dam/ticom/images/products/ic/microcontrollers/msp/evm-board/msp-exp430fr5994-angled.png:large" alt="A MSP-EXP430FR5994 evaluation kit."></a>
+            <figcaption>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    Sed vestibulum leo sit amet lorem accumsan, id hendrerit quam facilisis. 
+                    Fusce vehicula, sapien vitae eleifend ullamcorper, est nisi aliquam arcu, a vehicula felis lacus ac nisl. 
+                    Duis quis magna arcu. Proin quis odio id nisi aliquam ultricies. Vestibulum convallis vitae odio ut cursus. 
+                    Ut euismod, ipsum ac gravida vehicula, dolor quam dapibus felis, eu suscipit eros purus id nisl. Sed euismod quam a felis posuere, ac aliquet ex blandit. 
+                </p>
+            </figcaption>
+        </figure>
       </section>
       <section>
         <h2>FOO</h2>
