--- a/index.html
+++ b/index.html
@@ -1,76 +1,83 @@
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-        <link href="styles.css" rel="stylesheet">
         <meta charset="utf-8">
-        <title>Homepage</title>
-        <script> src="/scripts/index.js"</script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+        <!-- My stylesheet -->
+        <link href="styles.css" rel="stylesheet">
+        <!-- My Script -->
+        <script src="main.js"></script>
+
+        <!-- Typography -->
+        <!-- Quicksand -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rum+Raisin&display=swap" rel="stylesheet">
+
+        <!-- Raleway -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+        <title>Embedded Log</title>
+        <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     </head>
-    <body class="header">
-       <main>
-      <h1 class="header">Embedded Journey</h1>
-      <section>
-        <h2>Homepage</h2>
-        <p>See more <a target="_blank" href="/pages/page_1.html">pages</a> in our site.</p>
-        <figure>
-            <a href="https://www.ti.com/tool/MSP-EXP430FR5994"><img src="https://www.ti.com/content/dam/ticom/images/products/ic/microcontrollers/msp/evm-board/msp-exp430fr5994-angled.png:large" alt="A MSP-EXP430FR5994 evaluation kit."></a>
-            <figcaption>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Sed vestibulum leo sit amet lorem accumsan, id hendrerit quam facilisis. 
-                    Fusce vehicula, sapien vitae eleifend ullamcorper, est nisi aliquam arcu, a vehicula felis lacus ac nisl. 
-                    Duis quis magna arcu. Proin quis odio id nisi aliquam ultricies. Vestibulum convallis vitae odio ut cursus. 
-                    Ut euismod, ipsum ac gravida vehicula, dolor quam dapibus felis, eu suscipit eros purus id nisl. Sed euismod quam a felis posuere, ac aliquet ex blandit. 
-                </p>
-            </figcaption>
-        </figure>
-      </section>
-      <section>
-        <h2>FOO</h2>
-        <h3>BAR</h3>
-        <ul>
-          <li>BAZ</li>
-          <li>BAZ</li>
-          <li>BAZ</li>
-        </ul>
-        <figure>
-          <img src="" alt="INSERT IMAGE">
-          <figcaption>My <em>2005</em> website.</figcaption>  
-        </figure>
-        <h3>BAR</h3>
-        <ol>
-          <li>BAZ,</li>
-          <li>BAZ</li>
-          <li>BAZ</li>
-        </ol>
-        <figure>
-          <img src="" alt="INSERT IMAGE">
-          <figcaption>I <strong>Really</strong> need to get better at this.</figcaption>  
-        </figure>
-      </section>
-      <section>
-        <h2>FOO</h2>
-        <form action="">
-          <fieldset>
-            <legend>Do you like embedded systems?</legend>
-            <label><input id="yes" type="radio" name="yes-no" value="yes" checked> Yes</label>
-            <label><input id="no" type="radio" name="yes-no" value="no"> No</label>
-          </fieldset>
-          <fieldset>
-            <legend>SOMETHING</legend>
-            <input id="qux" type="checkbox" name="checkboxes" value="qux" checked> <label for="qux">QUX</label>
-            <input id="quux" type="checkbox" name="checkboxes" value="quux"> <label for="quux">QUUX</label>
-            <input id="foobar" type="checkbox" name="checkboxes" value="foobar"> <label for="foobar">FOOBAR</label>
-          </fieldset>
-          <input type="text" name="texfield" placeholder="FOOBARBAZ" required>
-          <button type="submit">Submit</button>
-        </form>
-      </section>
-    </main>
-    <footer>
-        <p>&copy; 2024 ChipCharmer. All rights reserved.</p>
-    </footer>
-  </body>
+    <body>
+      <header>
+          <nav class="topnav quicksand-nav">
+            <ul>
+              <li><a href="index.html">Home</a></li>
+              
+                <!-- drop down menu bootstrap -->
+                <li class="dropdown">
+                  <a href="#" data-toggle="dropdown">Portfolio</a>
+                  <ul class="dropdown-menu">
+                      <li><a href="/projects/hello.html">Hello World</a></li>
+                      <li><a href="portfolio.html">All Projects</a></li>
+                  </ul>
+              </li>
+
+              <li><a href="contact.html">Contact</a></li>
+              <li><a href="about.html">About</a></li>
+            </ul> 
+          </nav>    
+        </header>
+        <main>
+          <!-- image down the navigation bar -->
+          <div id="home_image"></div>
+              <section>
+                  <h1>Welcome to My Embedded Systems Learning Log</h1>
+                  <p>This is a personal website log for my journey learning embedded systems. Here you will find my portfolio, contact information, and more about me.</p>
+                  <p>This website started as a project for the CS50 course and I have decided to continue developing it as a personal webpage to document my journey learning about embedded systems.</p>
+              </section>
+
+              <!-- Text Placeholder -->
+              <section>
+                  <h2>Lorem Ipsum</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed euismod, nunc at pellentesque elementum, justo mauris cursus libero, quis tincidunt enim lacus sit amet nulla. Fusce ut faucibus ante, in ullamcorper diam. Morbi quis tortor lectus. Quisque mollis interdum lorem, eget efficitur dolor rutrum eu. Donec eget nibh at sem consequat commodo.</p>
+                  <p>Curabitur et magna at quam varius commodo ut ac dui. Donec lacinia pellentesque ultricies. Sed non tortor aliquet, malesuada lorem at, fringilla sapien. Sed viverra dictum sem, quis interdum arcu pulvinar a. Proin ac neque quis massa malesuada feugiat. Sed auctor elit a neque facilisis, sed semper ligula sodales. Fusce consectetur odio at ipsum posuere, sed cursus mauris malesuada.</p>
+                  <p>Aliquam erat volutpat. Sed ut dui ac augue blandit maximus non vitae lorem. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla at lorem sit amet nisl blandit ullamcorper. Integer vehicula, dui nec adipiscing ultricies, ligula justo iaculis dolor, vel consectetur lacus mi eu arcu. Donec aliquam est dui, vel vestibulum diam sollicitudin id. Quisque feugiat malesuada molestie.</p>
+              </section>
+              <section>
+                  <h2>Dolor Sit Amet</h2>
+                  <p>Consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla.</p>
+                  <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor.</p>
+              </section>
+              <section>
+                  <h2>Consectetur Adipiscing</h2>
+                  <p>Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                  <p>Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices.</p>
+              </section>
+      </main>      
+        <footer>
+          <div class="quicksand-footer">
+              <p>&copy; 2024 ChipCharmer. All rights reserved.</p>
+          </div>
+      </footer>
+      
+    </body>
 </html>
