--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,8 @@
                     <a href="#" data-toggle="dropdown">Portfolio</a>
                     <ul class="dropdown-menu">
                         <li><a href="/projects/hello.html">Hello World</a></li>
-                        <li><a href="portfolio.html">All Projects</a></li>
+                      <!-- trigger message explaining what happened to this webpage -->
+                      <li><a href="#" onclick="openPopup()">All Projects</a></li>
                     </ul>
                 </li>
 
@@ -48,7 +49,15 @@
           </header>
         <main>
           <!-- image down the navigation bar -->
-          <div id="contact_image"></div>
+          <div id="contact_image">
+              <!-- Show a message to the user since the portfolio is empty -->
+                <div id="empty-portfolio" class="popup">
+                    <div class="popup-content">
+                        <span onclick="closePopup()" style="float: right; cursor: pointer;">&times;</span>
+                        <p>No projects for now, sorry! I will try to upload some when i figure out this mess of website.</p>
+                    </div>
+                </div>
+          </div>
             <section>
                 <h1>Contact</h1>
                 <p>No Contact Info</p>
